--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "allowJs": true,
         "target": "es6",
         "module": "commonjs",
         "sourceMap": true,
@@ -10,7 +11,6 @@
     },
     "exclude": [
         "node_modules",
-        "test",
         "dist"
     ]
 }
