--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "make-ts",
+  "name": "json-make-ts",
   "version": "0.1.0",
   "description": "Make typescript object from JSON configuration",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "cross-env mocha -r node_modules/ts-node/register \"test/**/*.ts\" --reporter list --exit",
+    "test": "jest",
     "build": "tsc"
   },
   "repository": {
@@ -14,6 +14,7 @@
   },
   "keywords": [
     "make",
+    "recipe",
     "configuration",
     "ts",
     "typescript"
@@ -37,7 +38,6 @@
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.182",
-    "@types/mocha": "^5.2.5",
     "@types/node": "^9.4.7",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.7"
