--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "module": "commonjs",
         "sourceMap": true,
         "outDir": "dist",
-        "declaration": true
+        "declaration": true,
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules",
