--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-make-ts",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Make typescript object from JSON configuration",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,12 +33,12 @@
   ],
   "homepage": "https://github.com/lesslucifer/make-ts#readme",
   "dependencies": {
-    "bun": "^0.0.12",
     "lodash": "^4.17.11",
-    "reflect-metadata": "^0.1.12",
-    "typescript": "^4.7.4"
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
+    "bun": "^0.0.12",
+    "typescript": "^4.7.4",
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.182",
     "@types/node": "^9.4.7",
