--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
   ],
   "homepage": "https://github.com/lesslucifer/make-ts#readme",
   "dependencies": {
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
-    "bun": "^0.0.12",
-    "typescript": "^4.7.4",
     "@types/jest": "^28.1.6",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "^4.14.201",
     "@types/node": "^9.4.7",
+    "bun": "^0.0.12",
     "jest": "^28.1.3",
-    "ts-jest": "^28.0.7"
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   }
 }
